# nanoGPT

./: .gitignore  model.py  pyproject.toml  utils.py
config/: eval_gpt2.py  train_gpt2.py
notebooks/: mHC.ipynb
